# N.G.Fitness

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  ejemplo.txt  main.py  ngf.db  pyproject.toml
app/: __init__.py  main.py
app/core/: audit.py  config.py  dependencies.py  errors.py  security.py
app/db/: base.py  init_db.py
app/db/migrations/: env.py
app/middlewares/: audit_middleware.py  request_id.py  soft_delete_filter.py
app/modules/agenda/: __init__.py  models.py  repository.py  router.py  rules.py  schemas.py  selectors.py  service.py
app/modules/auth/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/coach/: __init__.py  router.py  schemas.py  selectors.py
app/modules/health/: router.py
app/modules/notifications/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/trainer_core/: __init__.py  models.py  repository.py  router.py  rules.py  schemas.py  selectors.py  service.py  validators.py
app/shared/: responses.py
app/shared/schemas/: audit.py  common.py  pagination.py
ngf-frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ngf-frontend/src/: App.jsx  main.jsx  styles.css
ngf-frontend/src/api/: agenda.js  agendaApi.js  auth.js  authApi.js  coach.js  http.js  sessionsApi.js  trainer.js
ngf-frontend/src/app/: AppRouter.jsx
ngf-frontend/src/components/: AppShell.jsx  ProtectedRoute.jsx
ngf-frontend/src/context/: AuthContext.jsx  ToastContext.jsx
ngf-frontend/src/hooks/: useToast.js
(+26 files in other folders)
